--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,24 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-rt = "1.1.1"
-actix-web = "3.2.0"
-anyhow = "1.0.38"
-chrono = "0.4.19"
+anyhow = "1.0.65"
+axum = "0.5.16"
+chrono = "0.4.22"
 dotenv = "0.15.0"
-log = "0.4.11"
-once_cell = "1.5.1"
+log = "0.4.17"
+once_cell = "1.15.0"
 pretty_env_logger = "0.4.0"
-reqwest = "0.10.8"
-serde = "1.0.123"
-serde_json = "1.0.62"
-serde_yaml = "0.8.17"
-teloxide = "0.3.3"
-tokio = { version = "0.2.22", features = ["rt-threaded", "macros", "sync", "time"] }
+reqwest = "0.11.12"
+serde = "1.0.145"
+serde_json = "1.0.85"
+serde_yaml = "0.9.13"
+teloxide = { version = "0.10.1", features = ["auto-send", "macros"] }
+tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
+tokio-stream = "0.1.10"
+tower = "0.4.13"
+tower-http = { version = "0.3.4", features = ["add-extension", "trace"] }
+tracing = "0.1.36"
+tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
 
 [profile.release]
 lto = true
